--- a/.gitignore
+++ b/.gitignore
@@ -57,4 +57,8 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
-
+Assets/StreamingAssets/settings.ini
+Assets/StreamingAssets/settings.ini.meta
+.idea/
+UserSettings/
+.vsconfig
